# rCore

./: .gitignore  LICENSE  Makefile  README.md  log  prompt-generator.py  rust-toolchain.toml  setup-qemu.sh
.github/workflows/: ci.yml  final.yml  keep-cache-alive.yml  mirror.yml  oj.yml
VisionFive2Runner/: Program.cs
docs/: Content.md  README.md  content.md  language.md  program_struct.md  syscalls.md  tech_doc.md  技术文档.md  文件系统.md  项目架构.md  项目结构.md
docs/Code description/: 文件系统.md  语言选择.md
docs/assets/: mirror.yml
docs/implements/: device_manager.md  driver.md  file_system.md  file_system_api.md  memory_manager.md  process_manager.md  sbi_output.md  trap_hander.md  语言选择.md
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config  config.toml
os/.github/workflows/: ci.yml
os/src/: batch.rs  config.rs  console.rs  entry.asm  lang_items.rs  link_app.S  linker-qemu.ld  loader.rs  logging.rs  main.rs  sbi.rs  stack_trace.rs  stdio.rs  timer.rs
os/src/allocation/: mod.rs
os/src/boards/: mod.rs  qemu.rs
os/src/driver/: mod.rs
os/src/driver/virt/: mod.rs
os/src/fat32/: device.rs  mod.rs  virt.rs
os/src/fs/: inode.rs  mod.rs
os/src/mm/: address.rs  frame.rs  heap.rs  memory.rs  mod.rs  page.rs
os/src/sbi/: console.rs  mod.rs  qemu.rs  system.rs
os/src/sync/: up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs  system.rs
os/src/task/: TaskManager.rs  context.rs  mod.rs  pid.rs  processor.rs  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs
test/: .gitignore  demo_test.py  visualize_result.py
test/riscv64/: brk  chdir  clone  close  dup  dup2  execve  exit  fork  fstat  getcwd  getdents  getpid  getppid  gettimeofday  mkdir_  mmap  mount  munmap  open  openat  (+12 more)
user/: Cargo.toml  build.py
(+62 files in other folders)
