[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
sbi-spec = "0.0.7"
fatfs = { git = "https://github.com/neuq-rcore/rust-fatfs", default-features = false }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
buddy_system_allocator = { git = "https://github.com/neuq-rcore/buddy_system_allocator" }

[profile.release]
debug = true
